# woxel

./: .gitignore  Cargo.toml  README.md  index.html
assets/: test.vdb
examples/: load_vdb.rs
src/: data_structure.rs  lib.rs  main.rs  runtime.rs
src/render/: camera.rs  egui_dev.rs  frame_descriptor.rs  mod.rs  recorder.rs  shader.rs  wgpu_context.rs
src/render/gpu_types/: atlas.rs  camera.rs  compute_state.rs  mask.rs  mod.rs  quad.rs  ray.rs  state.rs  texture.rs  vertex.rs
src/render/pipelines/: canvas.rs  compute.rs  mod.rs  solid.rs
src/scene/: mod.rs  scene.rs  state.rs
src/shaders/: canvas.frag.wgsl  raycast.comp.wgsl  solid.frag.wgsl  solid.vert.wgsl
src/vdb/: data_structure.rs  mod.rs  read.rs  transform.rs  vdb345.rs  write.rs
thesis/: main.tex  ref.bib  test.tex
thesis/chapters/: background.tex  intro.tex  methodology.tex  ray.tex  results.tex  test.tex  vdb.tex
