[package]
name = "woxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
cfg-if = "1.0.0"
cgmath = "0.18.0"
glam = "0.24.1"
pollster = "0.3.0"
tracing = "0.1.37"
wgpu = "0.17.0"
winit = "0.28.6"
