[package]
name = "woxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.10.0"
glam = "0.24.1"
log = "0.4.20"
pollster = "0.3.0"
tracing = "0.1.37"
wgpu = "0.17.0"
winit = "0.28.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Window",
]}

[lib]
crate-type = ["cdylib", "rlib"]
