[package]
name = "woxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
bitvec = "1.0.1"
blosc-src = "0.2.1"
bytemuck = { version = "1.14.0", features = ["extern_crate_alloc"] }
bytemuck_derive = "1.5.0"
byteorder = "1.5.0"
bytes = "1.5.0"
cfg-if = "1.0.0"
cgmath = "0.18.0"
egui = "0.23.0"
egui_plot = "0.23.0"
egui_wgpu_backend = "0.26.0"
egui_winit_platform = "0.20.0"
env_logger = "0.10.0"
flate2 = "1.0.27"
glam = "0.24.1"
half = { version = "2.3.1", features = ["bytemuck", "num-traits"] }
instant = "0.1.12"
itertools = "0.11.0"
log = "0.4.20"
pollster = "0.3.0"
thiserror = "1.0.49"
tracing = "0.1.37"
wgpu = "0.17.0"
winit = "0.28.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Window",
]}

[lib]
crate-type = ["cdylib", "rlib"]
